heade con due sezioni flex

--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>Flex Layout</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="flex-nav">
+        <section class="small-column">logo</section>
+        <section class="big-column">link link link link link</section>
+        <section class="small-column right-column">login</section>
+      </nav>
 
-    <main></main>
+      <div class="flex-big-logo">
+        <section class="big-logo"></section>
+      </div>
+    </header>
 
-    <footer></footer>
+    <main>
+      <!-- 4 sezioni flex in un grande container fuori da main -->
+    </main>
+
+    <footer>
+      <!-- due sezioni, una flex con figli flex -->
+    </footer>
   </body>
 </html>
