--- a/index.html
+++ b/index.html
@@ -8,23 +8,47 @@
   </head>
   <body>
     <header>
-      <nav class="flex-nav">
+      <nav class="flex-container">
         <section class="small-column">logo</section>
         <section class="big-column">link link link link link</section>
         <section class="small-column right-column">login</section>
       </nav>
 
-      <div class="flex-big-logo">
+      <div class="flex-container big-logo-container">
         <section class="big-logo"></section>
       </div>
     </header>
 
     <main>
-      <!-- 4 sezioni flex in un grande container fuori da main -->
+      <section class="flex-container column-container">
+        <div class="blue-column"></div>
+        <div class="pink-column"></div>
+      </section>
+      <section class="flex-container column-container gray">
+        <div class="pink-column"></div>
+        <div class="blue-column"></div>
+      </section>
+      <section class="flex-container column-container">
+        <div class="blue-column"></div>
+        <div class="pink-column"></div>
+      </section>
+      <section class="flex-container box-container gray">
+        <div class="green-box"></div>
+      </section>
     </main>
 
     <footer>
-      <!-- due sezioni, una flex con figli flex -->
+      <div class="flex-container column-container black">
+        <section></section>
+        <section class="flex-container">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </section>
+      </div>
+      <hr />
+      <div></div>
     </footer>
   </body>
 </html>
