--- a/index.html
+++ b/index.html
@@ -38,17 +38,22 @@
     </main>
 
     <footer>
-      <div class="flex-container column-container black">
-        <section></section>
-        <section class="flex-container">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+      <div class="flex-container first-footer-container black">
+        <section class="crimson-column"></section>
+        <section class="flex-container green-column">
+          <div class="small-green-column"></div>
+          <div class="small-green-column"></div>
+          <div class="small-green-column orange"></div>
+          <div class="small-green-column"></div>
         </section>
       </div>
       <hr />
-      <div></div>
+      <div class="flex-container second-footer-container black"">
+        <section class="flex-container aquamarine-box">
+          <span class="footer-line">Logo</span>
+          <span class="footer-line">Bottone</span>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
