--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       </nav>
 
-      <div class="flex-container big-logo-container">
+      <div class="flex-container big-logo-container column-container">
 
         <section class="big-logo border"></section>
 
@@ -49,7 +49,7 @@
 
       </section>
 
-      <section class="flex-container box-container gray">
+      <section class="flex-container column-container gray">
 
         <div class="green-box border"></div>
 
